# sfml

./: CMakeLists.txt  course.md
src/: game_board.cpp  game_board.h  main.cpp  snake.cpp  snake.h
